--- a/manifest.yml
+++ b/manifest.yml
@@ -5,3 +5,4 @@ applications:
   buildpack: liberty-for-java
   env:
     CONVERSATION_WORKSPACE_ID: 4982306d-fb7e-40a8-87da-97dc5d9e97ae
+    CAR_SERVICE_HOST: mengyt.mybluemix.net
