--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Chatbot</groupId>
-  <artifactId>Chatbot</artifactId>
+  <groupId>chartRobotForJava</groupId>
+  <artifactId>chartRobotForJava</artifactId>
   <version>0.0.1</version>
   <packaging>war</packaging>
-  <name>Chatbot</name>
+  <name>chartRobotForJava</name>
   <description>Build your own chatbot on the Innovation Day</description>
   <build>
     <sourceDirectory>src</sourceDirectory>
